--- a/style.css
+++ b/style.css
@@ -1,108 +1,151 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
     box-sizing: border-box;
+    font-family: Galano Grotesque Alt, Adjusted Trebuchet MS Fallback, Trebuchet MS, sans-serif; 
+    color: var(--text-color);
 }
 
-body {
-    background-color: #b94392;
+:root{
+    /* Colors  */
+    --text-color : rgb(26, 24, 22);
+    --text-color-light-dark : rgba(26,24,22,0.6);
+    --text-color-white : white;
+    --width-large : 90vw;
+
+}
+
+.container{
+    width: var(--width-large);
+    margin: 0 auto;
+}
+nav{
+    background-color: var(--text-color-white);
+    height: 4rem;
+    position: sticky;
+}
+
+.logo{
+    font-size: 1.2rem;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--text-color);
+}
+
+.flex{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.nav-btns{
+    gap: 1.5rem;
+}
+.nav-btns li a{
+    font-size: 1.1rem;
+    font-weight: 700;
+    transition: .1s;
+    padding-bottom: 1rem;
+}
+
+.nav-btns li a:hover {
+    border-bottom: 3px solid var(--text-color) ;
+}
+
+.sign-up-btn{
+    background-color: var(--text-color);
+    text-align: center;
+    padding: 1.05rem 1.3rem;
+    border-radius: 2rem;
+    color: var(--text-color-white);
+    padding: none;
+}
+
+.sign-up-btn:hover{
+    background-color: var(--text-color-light-dark);
+}
+.sign-up-btn a:hover{
+    border: none !important;
+}
+
+.sign-up-btn a{
+    color: white !important;
+}
+
+.background{
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,.7)),url(img/bg.webp);
+    background-size: cover;
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column;
+    row-gap: 4rem;
+}
+
+.heading{
+    color: var(--text-color-white);
+    max-width:45vw;
+    font-weight: 900 !important;
+    font-size:3.5rem;
     text-align: center;
 }
 
-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    flex-direction: column;
-    gap: 4rem;
-
+.links{
+    width: 40vw;
 }
 
-form input{
+.links li a{
+    color: var(--text-color-white); 
+    font-weight: 700;
+    font-size: 1.1rem;
+    padding-bottom: 1.6rem;
+    transition: .1s;
+}
+
+.links li a:hover{
+    border-bottom: 3px solid var(--text-color-white);
+}
+
+.search{
+    background-color: var(--text-color-white);
+    width: 40vw;
+    border-radius: 3rem;
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;
+}
+
+.search-box{
     border: none;
-    padding: 1.3rem;
-    width: 25rem;
-    border-radius: 1.2rem;
-    font-weight: bolder;
+    padding: 1rem 0;
+    padding-left:1.6rem;
+    width: 35vw;
+    border-radius: 3rem;
     font-size: 1.2rem;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 600;
+    outline: none;
 }
 
-form button{
-    border: none;
-    padding: 1.4rem;
-    border-radius: 2rem;
-    width: 10rem;
-    background-color: rgb(0, 217, 255);
-    color: rgb(0, 0, 0);
-    font-size: 1.7rem;
-    font-weight: 900;
-}
-
-.container {
+.search-icon{
+    width: 3rem;
+    text-align: center;
+    height: 3rem ;
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 20px;
-    flex-direction: column;
-    row-gap: 6vmin;
-    font-size: 4vmin;
-   
-}
-
-.winner {
-    display: none;
-}
-.show {
-    display: block;
-}
-
-
-
-.game {
-    width: 70vmin;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 3vmin;
+    border-radius: 50%;
+    background-color: black;
+    color: var(--text-color-white);
+    margin-right: .2rem;
+    font-size: 1.2rem;
+
 }
 
-.box {
-    font-size: 10vmin;
-    width: 17vmin;
-    height: 17vmin;
-    border-radius: 2vmin;
-    border: none;
-    cursor: pointer;
-    background-color: aliceblue;
-    box-shadow: 0px 0px 30px 1px black;
+.search-icon:hover{
+    background-color: var(--text-color-light-dark);
 }
 
-.x {
-    background-color: #0E1428;
-    color: #7B9E89;
-}
-
-.o {
-    background-color: #7B9E89;
-    color: #0E1428;
-}
-
-.resetbtn {
-    border: none;
-    background-color: #0E1428;
-    color: #F0A202;
-    padding: 2.5vmin;
-    border-radius: 1vmin;
-    font-size: 3vmin;
-    font-weight: 900;
-    box-shadow: 0px 0px 30px 1px black;
-}
-.b{
-    margin-top: 13rem;
-}
-.newbtn{
-    margin-bottom: 17rem;
-}
