--- a/responsive.css
+++ b/responsive.css
@@ -1,10 +1,53 @@
-/* @media (max-width : 575.98px) {
+@media (max-width : 1100px) {
+    .nav-btns{
+        flex-direction: column;
+        row-gap: 4vh;
+    }
+    
+    .nav-btns li a:hover{
+        border-bottom: none !important;
+
+    }
     .navigation-bar-links{
+        flex-direction: column;
+        width: 100% !important;
+        height: 100vh;
         position: absolute;
-        top: 100px;
+        background-color: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(20px);
+        right: 0;
+        top: 0;
+        row-gap: 1.2rem;
+        padding-top: 2.5rem;
+        transform: translateX(100%);
+    }
+    
+    .nav{
+        padding: 0 2rem;
+        justify-content: space-between !important;
+
+    }
+
+    .nav-links{
+        width: 100% !important;
+
+    }
+    
+    .nav-rentals{
+        width: 100% !important;
+    }
+    
+    .nav-login-signup{
+        width: 100% !important;
+        margin-top: 15vh;
+    }
+
+    .fa-xmark{
+        display: none;
     }
 
     .menu-bar{
         display: block !important;
+        z-index: 100;
     }
-} */
+}
