--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@
 
 /* Navigation bar  */
 
-nav{
+
+.nav{
     background-color: var(--text-color-white);
     height: 4rem;
     position: fixed;
-    width: 100vw;
+    width: 100%;
     top: 0;
     box-shadow: 0px 0px 10px rgba(70, 68, 68, 0.514);
     z-index: 11;
@@ -43,6 +44,14 @@ nav{
 
 .navigation-bar-links{
     width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly ;
+    transition: .5s;
+}
+
+.show-in-mobile{
+    transform: translateX(0);
 }
 
 .nav-links{
