--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-@import url(responsive.css);
-
-
 *{
     margin: 0;
     padding: 0;
@@ -47,11 +44,12 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly ;
-    transition: .5s;
+    transition: .3s;
 }
 
 .show-in-mobile{
-    transform: translateX(0);
+    transform: translateX(0) !important;
+    opacity: 1 !important;
 }
 
 .nav-links{
@@ -125,7 +123,7 @@ header{
     background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,.7)),url(img/bg.webp);
     background-size: cover;
     width: 100%;
-    height: 91vh;
+    height: 92vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -135,8 +133,8 @@ header{
 
 .heading{
     color: var(--text-color-white);
-    max-width:45vw;
-    font-weight: 900 !important;
+    max-width:45%;
+    font-weight: 900;
     font-size:3.5rem;
     text-align: center;
 }
@@ -160,7 +158,7 @@ header{
 
 .search{
     background-color: var(--text-color-white);
-    width: 40vw;
+    width: 40%;
     border-radius: 3rem;
     display: flex;
     justify-content: space-between ;
@@ -171,7 +169,7 @@ header{
     border: none;
     padding: 1rem 0;
     padding-left:1.6rem;
-    width: 35vw;
+    width: 90%;
     border-radius: 3rem;
     font-size: 1.2rem;
     font-weight: 600;
@@ -437,7 +435,7 @@ footer{
 .sec2btns{
     min-width: 10vw;
     max-width: 27vw;
-    height: 10vh;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -458,6 +456,7 @@ footer{
 .sec2boxes{
     height: 17rem;
     margin-top:3rem;
+    display: flex;
     align-items: start;
     justify-content: space-between;
     justify-items: stretch;
@@ -556,6 +555,11 @@ footer{
 .image-btn{
     max-width: 40%;
     font-size: 1rem;
+}
+
+.search-small{
+    width: 80%;
+    border: 1px solid black
 }
 
 .right-image-text{
