--- a/responsive.css
+++ b/responsive.css
@@ -73,7 +73,7 @@
         width: 2.7rem;
     }
     .sec1{
-        height: 300%;
+        height: 300vh;
     }
     .secheading{
         font-size: 20px;
